; ModuleID = '/home/carl/AnghaBench/poco/Data/SQLite/src/extr_sqlite3.c_vdbeSorterAddToTree.c'
source_filename = "/home/carl/AnghaBench/poco/Data/SQLite/src/extr_sqlite3.c_vdbeSorterAddToTree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { %struct.TYPE_12__* }
%struct.TYPE_12__ = type { %struct.TYPE_11__* }

@SQLITE_OK = common dso_local global i32 0, align 4
@SORTER_MAX_MERGE_COUNT = common dso_local global i32 0, align 4
@SQLITE_NOMEM_BKPT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, %struct.TYPE_11__*, %struct.TYPE_11__*)* @vdbeSorterAddToTree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vdbeSorterAddToTree(i32* %0, i32 %1, i32 %2, %struct.TYPE_11__* %3, %struct.TYPE_11__* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_11__*, align 8
  %10 = alloca %struct.TYPE_11__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_11__*, align 8
  %15 = alloca %struct.TYPE_12__*, align 8
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_10__*, align 8
  %18 = alloca %struct.TYPE_11__*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store %struct.TYPE_11__* %3, %struct.TYPE_11__** %9, align 8
  store %struct.TYPE_11__* %4, %struct.TYPE_11__** %10, align 8
  %19 = load i32, i32* @SQLITE_OK, align 4
  store i32 %19, i32* %11, align 4
  store i32 1, i32* %12, align 4
  %20 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  store %struct.TYPE_11__* %20, %struct.TYPE_11__** %14, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = load %struct.TYPE_11__*, %struct.TYPE_11__** %10, align 8
  %23 = call i32 @vdbeIncrMergerNew(i32* %21, %struct.TYPE_11__* %22, %struct.TYPE_12__** %15)
  store i32 %23, i32* %11, align 4
  store i32 1, i32* %13, align 4
  br label %24

24:                                               ; preds = %32, %5
  %25 = load i32, i32* %13, align 4
  %26 = load i32, i32* %7, align 4
  %27 = icmp slt i32 %25, %26
  br i1 %27, label %28, label %35

28:                                               ; preds = %24
  %29 = load i32, i32* %12, align 4
  %30 = load i32, i32* @SORTER_MAX_MERGE_COUNT, align 4
  %31 = mul nsw i32 %29, %30
  store i32 %31, i32* %12, align 4
  br label %32

32:                                               ; preds = %28
  %33 = load i32, i32* %13, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %13, align 4
  br label %24

35:                                               ; preds = %24
  store i32 1, i32* %13, align 4
  br label %36

36:                                               ; preds = %90, %35
  %37 = load i32, i32* %13, align 4
  %38 = load i32, i32* %7, align 4
  %39 = icmp slt i32 %37, %38
  br i1 %39, label %40, label %44

40:                                               ; preds = %36
  %41 = load i32, i32* %11, align 4
  %42 = load i32, i32* @SQLITE_OK, align 4
  %43 = icmp eq i32 %41, %42
  br label %44

44:                                               ; preds = %40, %36
  %45 = phi i1 [ false, %36 ], [ %43, %40 ]
  br i1 %45, label %46, label %93

46:                                               ; preds = %44
  %47 = load i32, i32* %8, align 4
  %48 = load i32, i32* %12, align 4
  %49 = sdiv i32 %47, %48
  %50 = load i32, i32* @SORTER_MAX_MERGE_COUNT, align 4
  %51 = srem i32 %49, %50
  store i32 %51, i32* %16, align 4
  %52 = load %struct.TYPE_11__*, %struct.TYPE_11__** %14, align 8
  %53 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %52, i32 0, i32 0
  %54 = load %struct.TYPE_10__*, %struct.TYPE_10__** %53, align 8
  %55 = load i32, i32* %16, align 4
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %54, i64 %56
  store %struct.TYPE_10__* %57, %struct.TYPE_10__** %17, align 8
  %58 = load %struct.TYPE_10__*, %struct.TYPE_10__** %17, align 8
  %59 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %58, i32 0, i32 0
  %60 = load %struct.TYPE_12__*, %struct.TYPE_12__** %59, align 8
  %61 = icmp eq %struct.TYPE_12__* %60, null
  br i1 %61, label %62, label %76

62:                                               ; preds = %46
  %63 = load i32, i32* @SORTER_MAX_MERGE_COUNT, align 4
  %64 = call %struct.TYPE_11__* @vdbeMergeEngineNew(i32 %63)
  store %struct.TYPE_11__* %64, %struct.TYPE_11__** %18, align 8
  %65 = load %struct.TYPE_11__*, %struct.TYPE_11__** %18, align 8
  %66 = icmp eq %struct.TYPE_11__* %65, null
  br i1 %66, label %67, label %69

67:                                               ; preds = %62
  %68 = load i32, i32* @SQLITE_NOMEM_BKPT, align 4
  store i32 %68, i32* %11, align 4
  br label %75

69:                                               ; preds = %62
  %70 = load i32*, i32** %6, align 8
  %71 = load %struct.TYPE_11__*, %struct.TYPE_11__** %18, align 8
  %72 = load %struct.TYPE_10__*, %struct.TYPE_10__** %17, align 8
  %73 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %72, i32 0, i32 0
  %74 = call i32 @vdbeIncrMergerNew(i32* %70, %struct.TYPE_11__* %71, %struct.TYPE_12__** %73)
  store i32 %74, i32* %11, align 4
  br label %75

75:                                               ; preds = %69, %67
  br label %76

76:                                               ; preds = %75, %46
  %77 = load i32, i32* %11, align 4
  %78 = load i32, i32* @SQLITE_OK, align 4
  %79 = icmp eq i32 %77, %78
  br i1 %79, label %80, label %89

80:                                               ; preds = %76
  %81 = load %struct.TYPE_10__*, %struct.TYPE_10__** %17, align 8
  %82 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %81, i32 0, i32 0
  %83 = load %struct.TYPE_12__*, %struct.TYPE_12__** %82, align 8
  %84 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %83, i32 0, i32 0
  %85 = load %struct.TYPE_11__*, %struct.TYPE_11__** %84, align 8
  store %struct.TYPE_11__* %85, %struct.TYPE_11__** %14, align 8
  %86 = load i32, i32* %12, align 4
  %87 = load i32, i32* @SORTER_MAX_MERGE_COUNT, align 4
  %88 = sdiv i32 %86, %87
  store i32 %88, i32* %12, align 4
  br label %89

89:                                               ; preds = %80, %76
  br label %90

90:                                               ; preds = %89
  %91 = load i32, i32* %13, align 4
  %92 = add nsw i32 %91, 1
  store i32 %92, i32* %13, align 4
  br label %36

93:                                               ; preds = %44
  %94 = load i32, i32* %11, align 4
  %95 = load i32, i32* @SQLITE_OK, align 4
  %96 = icmp eq i32 %94, %95
  br i1 %96, label %97, label %108

97:                                               ; preds = %93
  %98 = load %struct.TYPE_12__*, %struct.TYPE_12__** %15, align 8
  %99 = load %struct.TYPE_11__*, %struct.TYPE_11__** %14, align 8
  %100 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %99, i32 0, i32 0
  %101 = load %struct.TYPE_10__*, %struct.TYPE_10__** %100, align 8
  %102 = load i32, i32* %8, align 4
  %103 = load i32, i32* @SORTER_MAX_MERGE_COUNT, align 4
  %104 = srem i32 %102, %103
  %105 = sext i32 %104 to i64
  %106 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %101, i64 %105
  %107 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %106, i32 0, i32 0
  store %struct.TYPE_12__* %98, %struct.TYPE_12__** %107, align 8
  br label %111

108:                                              ; preds = %93
  %109 = load %struct.TYPE_12__*, %struct.TYPE_12__** %15, align 8
  %110 = call i32 @vdbeIncrFree(%struct.TYPE_12__* %109)
  br label %111

111:                                              ; preds = %108, %97
  %112 = load i32, i32* %11, align 4
  ret i32 %112
}

declare dso_local i32 @vdbeIncrMergerNew(i32*, %struct.TYPE_11__*, %struct.TYPE_12__**) #1

declare dso_local %struct.TYPE_11__* @vdbeMergeEngineNew(i32) #1

declare dso_local i32 @vdbeIncrFree(%struct.TYPE_12__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
